2006-04-16	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Post-release version bump.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* === Released 4.3.90.1 ===
	* configure.in.in: Bump dependencies.
	* NEWS, configure.in.in: Bump version.
	* po/xfce4-session.pot, po/*.po: Updated.
	* xfce4-session.spec.in: Update RPM spec file.
	* xfce4-session/main.c(main): Update copyright date.
	* xfce4-session.rc: Update Failsafe session.

2006-04-14	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c(shutdownDialog): Apply patch from Jani
	  Monoses to fix "End session" dialog. Bug #1663.

2006-04-09	Benedikt Meurer <benny@xfce.org>

	* icons/Makefile.am: Be sure to run gtk-update-icon-cache after
	  installing new icons into the hicolor icon theme (skipped if $DESTDIR
	  is set).

2006-02-26	Benedikt Meurer <benny@xfce.org>

	* xfce4-session/shutdown.c: Fix indentation.

2005-11-30	Benedikt Meurer <benny@xfce.org>

	* settings/session/session.c, settings/splash/splash.c: Fix naming
	  inconsistency for kiosk mode settings. This fixes bug #1246.

2005-09-01	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/main.c: Do not include <libxfce4util/i18n.h> directly.

2005-07-20	Benedikt Meurer <benny@xfce.org>

	* engines/balou/config.c, engines/mice/mice.c, engines/simple/simple.c,
	  xfce4-session/xfsm-chooser.c: Mark more user visible strings for
	  translation, using the patch provided by Daichi Kawahata
	  <daichik@users.sourceforge.net>.
	* xfce4-session.rc, engines/balou/themes/Default/themerc: Add japanese
	  translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.

2005-07-16	Jean-Francois Wauthy

	* po/eo.po: Update esperanto translations, thanks to Sylvain
	  Vedrenne <sylvain.vedrenne@free.fr>.

2005-07-15	Benedikt Meurer <benny@xfce.org>

	* xfce4-tips/, NEWS: Import the xfce4-tips from the xfce4-toys and
	  modify it to support the new autostart mechanism.
	* po/POTFILES.in: Add new translateable files here.