@@ -1,3 +1,9 @@
+2006-04-19	Benedikt Meurer <benny@xfce.org>
+
+	* settings/session/session.c(mcs_plugin_init),
+	  settings/splash/splash.c(mcs_plugin_init): Use separate translation
+	  for the settings manager button label. Bug #1669.
+
 2006-04-16	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
